Fix footer text to align it centered

--- a/style/_layout.scss
+++ b/style/_layout.scss
@@ -88,6 +88,7 @@ header {
 }
 
 footer {
+  text-align: center;
   padding: {
     top: var.$padding-general;
     bottom: var.$padding-general;
