--- a/style/style.css
+++ b/style/style.css
@@ -178,6 +178,7 @@ header {
 }
 
 footer {
+  text-align: center;
   padding-top: 1rem;
   padding-bottom: 1rem;
 }/*# sourceMappingURL=style.css.map */
